--- a/todolist/todoapp/templates/main/header.html
+++ b/todolist/todoapp/templates/main/header.html
@@ -30,6 +30,7 @@
     <main role="main" class="container-xl">
         <div class="row">
             <div class="col-lg-12 col-md-12-p-0 col-sm-12">
+                {% include 'main/message.html'%}
                 {% block content %}
                 {% endblock %}
             </div>
