--- a/todolist/todoapp/templates/main/header.html
+++ b/todolist/todoapp/templates/main/header.html
@@ -1,5 +1,4 @@
 {% load static %}
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -8,29 +7,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Link to page favicon.ico to display in location Bar-->
-    <!-- <link rel="icon" href="{% static 'images/favicon.png' %}"> -->
+    {% comment %} <link rel="icon" href="{% static 'images/favicon.png' %}"> {% endcomment %}
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
-          integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+        integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
 
     <!-- reference to your installed Font Awesome Free package's files here -->
-    <!-- <script src="{% static 'fontawesomefree/js/all.min.js' %}"></script>
-    <link href="{% static 'fontawesomefree/css/all.min.css' %}" rel="stylesheet" type="text/css"> -->
+    <script src="{% static 'fontawesomefree/js/all.min.js' %}"></script>
+    <link href="{% static 'fontawesomefree/css/all.min.css' %}" rel="stylesheet" type="text/css">
 
     <!-- Custom CSS -->
-    <link rel="stylesheet" type="text/css" href="{% static 'app/style.css' %}"/>
+    <link rel="stylesheet" type="text/css" href="{% static 'app/style.css' %}">
 
     <!-- Jquery JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
 </head>
 <body>
-    {% include 'app/navbar.html' %}
+    {% include 'app/navbar.html' %} 
     <main role="main" class="container-xl">
         <div class="row">
             <div class="col-lg-12 col-md-12-p-0 col-sm-12">
-                {% include 'main/message.html'%}
+                {% include 'main/message.html' %}
                 {% block content %}
                 {% endblock %}
             </div>
@@ -38,7 +37,7 @@
     </main>
 
     <!-- Prism JS -->
-    <!-- <script src="{% static 'prism.js' %}"></script> -->
+    <script src="{% static 'prism.js' %}"></script>
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js"
@@ -46,6 +45,6 @@
         crossorigin="anonymous"></script>
 
     <!-- Optional JavaScript -->
-    <!-- <script type="text/javascript" src="{% static 'main/custom.js' %}"></script> -->
+    <script type="text/javascript" src="{% static 'main/custom.js' %}"></script>
 </body>
 </html>
