--- a/todolist/todoapp/templates/app/index.html
+++ b/todolist/todoapp/templates/app/index.html
@@ -5,19 +5,70 @@
     <h2 style="margin:5px">Django To Do List App</h2>
     <form action="" method="POST">
       {% csrf_token %}
-      <input type="text" name="title" id="myInput" placeholder="Title...">
+      <input type="text" name="title" id="myInput" placeholder="Title..." required>
+      {% comment %} <input type="text" name="description" id="myInput" placeholder="Description..."> {% endcomment %}
+
+      <input type="datetime-local" id="myInput" name="finish_date" required>
       <button type="submit" class="addBtn">Add</button>
     </form>
   </div>
   
   <ul id="myUL">
-    {% for todo in todos reversed %}
-    <li>{{todo.title | title}} <span class="close"><a style="text-decoration: none; color: black;" href="delete/{{todo.id}}">Delete</a></span>
-      </li>
-    {% endfor %}
+    <h3> Your To do </h3>
+    
+    {% comment %} <li>{{todo.title | title}}<span class="close"><a style="text-decoration: none; color: black;" href="delete/{{todo.id}}">Delete</a></span>
+      </li> {% endcomment %}
+      
+      <table class="table  ">
+        <thead class="table-dark">
+          <tr>
+            <td>Name</td>
+            <td>Description</td>
+            <td>Finish Day</td>
+            <td>Options</td>
+            <td></td>
+
+          </tr>
+        </thead>
+        {% for todo in todos%}
+        <tbody>
+          <tr>
+            <td {% if todo.complete %} class="completed" {% endif %} >{{todo.title}}</td>
+            <td {% if todo.complete %} class="completed" {% endif %} >{{todo.description}}</td>
+            <td {% if todo.complete %} class="completed" {% endif %}>{{todo.finish_date}}</td>
+            {% comment %} <td><a id="deleteBtn" class="a_index"  href="delete/{{todo.id}}">Delete</a></td> {% endcomment %}
+            {% comment %} <td><button onclick="showDeleteConfirmation()"><a id="deleteBtn" class="a_index" >Delete</a></button></td> {% endcomment %}
+            <td><a href="delete/{{todo.id}}" onclick="return confirmDelete({{todo.id}})">Delete</a></td>
+
+          </tr>
+        </tbody>
+        {% endfor %}
+      </table>
   </ul>
   </div>
-  {% endblock content %}
+  
+  <script>
+
+    <script>
+      function confirmDelete(todoId) {
+        var result = confirm("Bạn có chắc chắn muốn xóa?");
+        if (result) {
+          // Nếu người dùng nhấn OK
+          //alert("Xóa thành công!");
+          // Thực hiện công việc xóa ở đây, ví dụ:
+           window.location.href = "delete/" + todoId;
+        } else {
+          // Nếu người dùng nhấn Cancel
+          alert("Đã hủy xóa.");
+          // Không thực hiện công việc xóa
+        }
+    
+        // Trả về false để ngăn chặn sự kiện mặc định của liên kết
+        return false;
+      }
+    </script>
+    
+    {% endblock content %} 
 
 
 
