--- a/todolist/todoapp/templates/main/header.html
+++ b/todolist/todoapp/templates/main/header.html
@@ -14,8 +14,8 @@
         integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
 
     <!-- reference to your installed Font Awesome Free package's files here -->
-    <script src="{% static 'fontawesomefree/js/all.min.js' %}"></script>
-    <link href="{% static 'fontawesomefree/css/all.min.css' %}" rel="stylesheet" type="text/css">
+    {% comment %} <script src="{% static 'fontawesomefree/js/all.min.js' %}"></script>
+    <link href="{% static 'fontawesomefree/css/all.min.css' %}" rel="stylesheet" type="text/css"> {% endcomment %}
 
     <!-- Custom CSS -->
     <link rel="stylesheet" type="text/css" href="{% static 'app/style.css' %}">
@@ -37,7 +37,7 @@
     </main>
 
     <!-- Prism JS -->
-    <script src="{% static 'prism.js' %}"></script>
+    {% comment %} <script src="{% static 'prism.js' %}"></script> {% endcomment %}
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js"
@@ -45,6 +45,6 @@
         crossorigin="anonymous"></script>
 
     <!-- Optional JavaScript -->
-    <script type="text/javascript" src="{% static 'main/custom.js' %}"></script>
+    {% comment %} <script type="text/javascript" src="{% static 'main/custom.js' %}"></script> {% endcomment %}
 </body>
 </html>
